<resources>
    <string name="app_name">HealthAppElderly</string>
    <string name="telefonnummer">Enter phone number</string>
    <string name="send_verification_code">Send Verification Code</string>
    <string name="sign_up">SIGN UP</string>
    <string name="authenticate_elder">Authenticate Elder</string>
    <string name="log_in_as_g">
        Log in as
    </string>
    <string name="swedish">Svenska</string>
    <string name="english">English</string>
    <string name="login_elderly">Log in new Elderly</string>
    <string name="login">LOG IN</string>
    <string name="welcome">Welcome!</string>
    <string name="enter_4_digit_pin">Enter your 4 digit PIN below to log in!</string>
    <string name="input_4_digit_pin">Enter 4 digit PIN</string>
    <string name="elder_view">Elder view</string>
    <string name="logged_in_as">Logged in as </string>
    <string name="log_out">Log out</string>
    <string name="log_in_first">Log in for the first time</string>
    <string name="email">Email:</string>
    <string name="example_mail">example@service.com</string>
    <string name="code">Code:</string>
    <string name="pin_hint_x">XXXX</string>
    <string name="full_name">Full name</string>
    <string name="phone_number">Phone number</string>
    <string name="address">Address</string>
    <string name="allergies">Allergies</string>
    <string name="_4_digit_pin">4 digit PIN</string>
    <string name="sign_up_new_elder">Sign up new Elder</string>
    <string name="username">Username</string>
    <string name="no_meal_planned">No meals planned</string>
    <string name="check">Check</string>
    <string name="meal_reminder">Meal Reminder</string>
    <string name="example_comment">example comment</string>
    <string name="no_more_meals_today">No more Meals today!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="do_you_want_to_log_out">Do you want to log out?</string>

    <!-- Notification Stuff-->
    <string name="permission_request">Permission(s) requried</string>
    <string name="notif_post_perm">To be able to show you important information outside of the app.</string>
    <string name="perm_accept">Accept!</string>
    <string name="perm_deny">Deny!</string>

    <string name="time_to_eat">Time to eat</string>
    <string name="log_in_as">Log in as</string>
    <string name="toast_username_already_exists">Username already exists, choose another one</string>
    <string name="toast_new_elder_registered">New Elder Registered!</string>
    <string name="toast_enter_address">Enter address</string>
    <string name="toast_enter_username">Enter username</string>
    <string name="toast_enter_phone_number">Enter phone number</string>
    <string name="toast_enter_name">Enter name</string>
    <string name="toast_enter_pin_code">Enter PIN-code</string>
    <string name="toast_enter_email">Enter Email</string>
    <string name="toast_login_successful">Login Successful</string>
    <string name="toast_authentication_failed">Authentication failed.</string>
    <string name="foreground_service">FOREGROUND_SERVICE</string>
    <string name="service_is_running">Service is running...</string>
    <string name="toast_email_not_correct">Email not correct, Log in new Elderly</string>
</resources>