<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ElderView">


    <TextView
        android:id="@+id/loggedInUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/logged_in_as"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logoutButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="200dp"
        android:layout_marginBottom="10dp"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/red" />


    <RadioGroup
        android:id="@+id/radiog1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_swedish1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/swedish" />

        <RadioButton
            android:id="@+id/rb_english1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/english" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/header"
        android:layout_height="75dp"
        android:padding="16dp"
        android:background="@color/blue"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:text="@string/meal_reminder"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:textStyle="bold" />

    </LinearLayout>
    <RelativeLayout
        android:layout_below="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="20dp">
        <TextView
            android:id="@+id/tvMealType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_meal_planned"
            android:textSize="40dp"
            android:textStyle="bold"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/tvMealTime"
            android:layout_below="@+id/tvMealType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:text=""

            />
        <TextView
            android:id="@+id/tvMealComment"
            android:layout_below="@+id/tvMealTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text=""

            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/checkBtn"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/tvMealComment"
            android:textSize="30dp"
            android:text="@string/check"
            android:backgroundTint="@color/blue"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:layout_marginTop="50dp">

        </androidx.appcompat.widget.AppCompatButton>
    </RelativeLayout>

</RelativeLayout>